updated zeroing project modal

--- a/index.html
+++ b/index.html
@@ -2656,11 +2656,11 @@
                                 <div class="mb--20">
                                     <span style="border-radius: 4px;" class="date">January 2019 - December
                                         2019</span>
-                                    <h6 class=" mt--20 ">
+                                    <h6 class=" mt--30 ">
                                         Technology Used</h6>
 
                                 </div>
-                                <div class="mb--20">
+                                <div class="mb--40">
                                     <div class="button-group text-left m-0">
                                         <a class="rn-btn border-button btn-small project-tech-modal" href="#"> <img
                                                 src="./assets/images/skills/python.png">
@@ -2691,48 +2691,43 @@
                                             Stepper Motor</a>
                                     </div>
                                 </div>
-                                <div>
-                                    <div class="button-group ">
+                                <div class="project-link">
+                                    <div class="button-group m-0">
 
                                         <a href="https://drive.google.com/open?id=1Fb8yZuCEWpFuFW6J4u1qyJCBf9xLHsfn"
                                             target="_blank" class="rn-btn">
                                             <span>Demo Video </span>
-                                            <i data-feather="chevron-right"></i>
+                                            <img src="./assets/images/icons/video.png" class="ml-1" alt="">
                                         </a>
                                         <a href="https://drive.google.com/open?id=1of4miNjXVxRnoQs9kqHiHtiXteoAbk9i"
                                             target="_blank" class="rn-btn">
                                             <span>Presentation </span>
-                                            <i data-feather="chevron-right"></i>
+                                            <img src="./assets/images/icons/presentation.png" class="ml-1" alt="">
+
                                         </a>
 
                                         <a href="https://drive.google.com/file/d/1hToe1QhZcjwZcAHww_iDp7CO9eXm8Udc/view?usp=sharing"
                                             target="_blank" class="rn-btn">
-                                            <span>User Manual </span>
-                                            <i data-feather="chevron-right"></i>
+                                            <span>Documentation </span>
+                                            <img src="./assets/images/icons/docs.png" class="ml-1" alt="">
+
                                         </a>
 
                                         <a href="https://drive.google.com/open?id=1af9vZWi4SrmB4L0EzjTIkjakR6zmG6i6"
                                             target="_blank" class="rn-btn">
                                             <span>Project Poster </span>
-                                            <i data-feather="chevron-right"></i>
+                                            <img src="./assets/images/icons/poster.png" class="ml-1" alt="">
+
                                         </a>
                                     </div>
                                 </div>
-
-
-
-
-
-                                <!-- </div> -->
-                                <!-- End of .text-content -->
                             </div>
                         </div>
 
                         <div class="row ">
-                            <!-- <h6 class="title">Digital Marketo to Their New Office.</h6> -->
 
-                            <div class="col-md-12">
-                                <p class="mt--20 text-justify">
+                            <div class="col-md-12 mb-5">
+                                <p class=" text-justify font-size-17">
                                     Developed a weapon zeroing system for the
                                     Bangladesh Army. An android
                                     application was developed which can process
@@ -2750,28 +2745,70 @@
                                 </p>
 
                             </div>
+                            <div class="col-md-8 mb-4">
+                                <div id="carouselZeroingWebControls" class="carousel slide" data-ride="carousel">
+                                    <div class="carousel-inner ">
+                                        <div class="carousel-item inner active">
+                                            <img class="d-block w-100" style="height: 400px;"
+                                                src="assets/images/projects/zeroing/web1.png" alt="First slide">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img class="d-block w-100" style="height: 400px;"
+                                                src="assets/images/projects/zeroing/web2.png" alt="Second slide">
+                                        </div>
 
-                            <div class="col-md-9 d-flex align-items-center">
-                                <ul>
+                                        <div class="carousel-item">
+                                            <img class="d-block w-100" style="height: 400px;"
+                                                src="assets/images/projects/zeroing/web3.png" alt="Second slide">
+                                        </div>
 
-                                    <li class="mb--50">Developed an algorithm
-                                        that follows the zeroing
-                                        technique and this
-                                        algorithm was used for calculating the
-                                        required correction.</li>
-                                    <li class="mt--50">
-                                        An image processing system was
-                                        implemented where machine learning
-                                        was applied to get accurate and precise
-                                        values from the target
-                                        image. Python was used for creating the
-                                        image processing api.
+                                    </div>
 
-                                    </li>
-                                </ul>
+                                    <a class="carousel-control-prev" href="#carouselZeroingWebControls" role="button"
+                                        data-slide="prev">
+                                        <span class="" aria-hidden="true"> <i data-feather="chevron-left"></i>
+                                        </span>
+                                        <span class="sr-only">Previous</span>
+                                    </a>
+                                    <a class="carousel-control-next" href="#carouselZeroingWebControls" role="button"
+                                        data-slide="next">
+                                        <span class="" aria-hidden="true"> <i data-feather="chevron-right"></i>
+                                        </span>
+                                        <span class="sr-only">Next</span>
+                                    </a>
+                                </div>
                             </div>
+                            <div class="col-md-4 mb-4">
+                                <p class=" text-justify font-size-17">
+
+                                    Built the web application using PHP,
+                                    JavaScript, MySql, HTML and CSS.
+                                    The
+                                    android application was built with Java.
+                                </p>
+                            </div>
+
+
                             <div class="col-md-3">
-                                <div id="carouselZeroingAppControls" class="carousel slide" data-ride="carousel">
+
+                                <p class="font-size-17 text-justify">Developed an algorithm
+                                    that follows the zeroing
+                                    technique and this
+                                    algorithm was used for calculating the
+                                    required correction.</p>
+                                <p class="font-size-17 text-justify">
+                                    An image processing system was
+                                    implemented where machine learning
+                                    was applied to get accurate and precise
+                                    values from the target
+                                    image. Python was used for creating the
+                                    image processing api.
+
+                                </p>
+                            </div>
+
+                            <div class="col-md-4">
+                                <div id="carouselZeroingAppControls" class="carousel slide mx-3" data-ride="carousel">
                                     <div class="carousel-inner ">
                                         <div class="carousel-item inner active">
                                             <img class="d-block w-100" src="assets/images/projects/zeroing/app1.jpg"
@@ -2814,40 +2851,34 @@
                                 </div>
 
                             </div>
-                            <div class="col-md-6">
-                                <div id="carouselZeroingWebControls" class="carousel slide" data-ride="carousel">
-                                    <div class="carousel-inner ">
-                                        <div class="carousel-item inner active">
-                                            <img class="d-block w-100" style="height: 400px;"
-                                                src="assets/images/projects/zeroing/web1.png" alt="First slide">
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img class="d-block w-100" style="height: 400px;"
-                                                src="assets/images/projects/zeroing/web2.png" alt="Second slide">
-                                        </div>
 
-                                        <div class="carousel-item">
-                                            <img class="d-block w-100" style="height: 400px;"
-                                                src="assets/images/projects/zeroing/web3.png" alt="Second slide">
-                                        </div>
+                            <div class="col-md-5">
 
-                                    </div>
 
-                                    <a class="carousel-control-prev" href="#carouselZeroingWebControls" role="button"
-                                        data-slide="prev">
-                                        <span class="" aria-hidden="true"> <i data-feather="chevron-left"></i>
-                                        </span>
-                                        <span class="sr-only">Previous</span>
-                                    </a>
-                                    <a class="carousel-control-next" href="#carouselZeroingWebControls" role="button"
-                                        data-slide="next">
-                                        <span class="" aria-hidden="true"> <i data-feather="chevron-right"></i>
-                                        </span>
-                                        <span class="sr-only">Next</span>
-                                    </a>
-                                </div>
+
+                                <img src="assets/images/projects/zeroing/hw2.jpg" alt=""
+                                    style="width: 100%; height: auto; border-radius: 5px;">
+
+
+                                <p class="mt-3 font-size-17 text-justify">
+                                    Built the zeroing machine using three
+                                    stepper motors,
+                                    Arduino Mega, etc.
+                                </p>
+
+
+
+
+
+
+
+
                             </div>
-                            <div class="col-md-6 d-flex align-items-center">
+
+
+                            <!-- <div class="col-md-3"></div> -->
+
+                            <!-- <div class="col-md-6 ">
                                 <p>
 
                                     Built the web application using PHP,
@@ -2855,19 +2886,14 @@
                                     The
                                     android application was built with Java.
                                 </p>
-                            </div>
+                            </div> -->
 
-                            <div class="col-md-6 d-flex align-items-center">
-                                <p>
-                                    Built the zeroing machine using three
-                                    stepper motors,
-                                    Arduino Mega, etc.
-                                </p>
 
-                            </div>
-                            <div class="col-md-6"> <img src="assets/images/projects/zeroing/hw2.jpg" alt=""
-                                    style="width: 100%; height: auto;">
-                            </div>
+
+
+
+
+
 
 
 
