updated no chinta live link

--- a/index.html
+++ b/index.html
@@ -1053,7 +1053,7 @@
                                                                 </div>
                                                                 <div class="meta">
                                                                     <span><a target="_blank"
-                                                                            href="https://nochinta.xyz/"><i
+                                                                            href="https://demo.nochinta.xyz/"><i
                                                                                 class="feather-heart"></i></a>
                                                                         Live</span>
                                                                 </div>
@@ -1455,7 +1455,7 @@
                                                                 </div>
                                                                 <div class="meta">
                                                                     <span><a target="_blank"
-                                                                            href="https://nochinta.xyz/"></a>
+                                                                            href="https://demo.nochinta.xyz/"></a>
                                                                         Live</span>
                                                                 </div>
                                                             </div>
@@ -1601,7 +1601,7 @@
                                                                 </div>
                                                                 <div class="meta">
                                                                     <span><a target="_blank"
-                                                                            href="https://nochinta.xyz/">Live</a>
+                                                                            href="https://demo.nochinta.xyz/">Live</a>
                                                                     </span>
                                                                 </div>
                                                             </div>
@@ -2568,7 +2568,7 @@
                                     <!-- </p> -->
                                     <div class="button-group mt--20">
 
-                                        <a href="https://nochinta.xyz/" target="_blank" class="rn-btn">
+                                        <a href="https://demo.nochinta.xyz/" target="_blank" class="rn-btn">
                                             <span>Launch Live </span>
                                             <i data-feather="chevron-right"></i>
                                         </a>
