--- a/zeoring.html
+++ b/zeoring.html
@@ -479,21 +479,21 @@
 
 
                     <!-- Start Single Video Button  -->
-                    <div class="col-lg-6 col-md-6 col-12 mt_sm--30">
+                    <div class="col-lg-7 col-md-7 col-12 mt_sm--30">
                         <div id="carouselZeroingWebControls" class="carousel slide" data-ride="carousel">
                             <div class="carousel-inner ">
                                 <div class="carousel-item inner active">
-                                    <img class="d-block w-100" style="height: 400px;"
-                                        src="assets/images/projects/zeroing/web1.png" alt="First slide">
+                                    <img class="d-block w-100" src="assets/images/projects/zeroing/web1.jpg"
+                                        alt="First slide">
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" style="height: 400px;"
-                                        src="assets/images/projects/zeroing/web2.png" alt="Second slide">
+                                    <img class="d-block w-100" src="assets/images/projects/zeroing/web2.jpg"
+                                        alt="Second slide">
                                 </div>
 
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" style="height: 400px;"
-                                        src="assets/images/projects/zeroing/web3.png" alt="Second slide">
+                                    <img class="d-block w-100" src="assets/images/projects/zeroing/web3.png"
+                                        alt="Second slide">
                                 </div>
 
                             </div>
@@ -515,7 +515,7 @@
                     <!-- End Single Video Button  -->
 
                     <!-- Start Single Video Button  -->
-                    <div class="col-lg-6 col-md-6 col-12">
+                    <div class="col-lg-5 col-md-5 col-12">
 
                         <p>
 
@@ -573,10 +573,10 @@
         <!-- Rn footer area Start -->
         <div id="footer" class="rn-footer-area footer-style-2 rn-section-gapTop ">
 
-            <div class="copyright text-center ptb--40 section-separator">
+            <!-- <div class="copyright text-center ptb--40 section-separator">
                 <p class="description">© 2021. All rights reserved by <a target="_blank"
                         href="https://themeforest.net/user/rainbow-themes/portfolio">Rainbow-Themes.</a></p>
-            </div>
+            </div> -->
         </div>
         <!-- Rn footer area end -->
 
