updated cv and experience

--- a/index.html
+++ b/index.html
@@ -457,6 +457,36 @@
                 <div class="row mt--10">
                     <div class="col-12 mt_experience">
 
+                                                <!-- single skills -->
+                                                <div data-aos="fade-up" data-aos-duration="500" data-aos-delay="100" data-aos-once="true"
+                                                class="experience-style-two">
+                                                <div class="experience-left row">
+                                                    <div class="col-md-2">
+                                                        <img src="assets/images/portfolio/ixora.png" alt="Personal Portfolio">
+                                                    </div>
+                                                    <div class="experience-center col-md-10">
+                                                        <span class="date">March 2022 - Present</span>
+                                                        <h4 class="experience-title">
+                                                            <a target="_blank" href="https://www.ixorasolution.com/"> Ixora Solution Limited </a>
+                                                        </h4>
+                                                        <h6 class="subtitle">
+                                                            Software Engineer
+                                                        </h6>
+                    
+                                                        <ul>
+                                                            <li class="disc">Work closely with Cloud Engineers, QA, Project Manager and Product Manager throughout the development life cycle.</li>
+                                                            <li class="disc">Actively participate in Sprint planning and execution and also assist/mentor/train other team members as needed.</li>
+                                                            <li class="disc">Implement software components of highly available and scalable using Django, MERN,  and
+                                                                other web technologies.</li>
+                                                            <li class="disc">Configure, administrate and develop eCommerce systems using Magento, OpenCart, etc.</li>
+                                                        </ul>
+                    
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <!-- single skills -->
+
+
                         <!-- single skills -->
                         <div data-aos="fade-up" data-aos-duration="500" data-aos-delay="100" data-aos-once="true"
                             class="experience-style-two">
@@ -465,7 +495,7 @@
                                     <img src="assets/images/portfolio/oict.png" alt="Personal Portfolio">
                                 </div>
                                 <div class="experience-center col-md-10">
-                                    <span class="date">April 2021 - Present</span>
+                                    <span class="date">April 2021 - March 2022</span>
                                     <h4 class="experience-title">
                                         <a target="_blank" href="https://www.one-ict.com/"> One Information And
                                             Communications Technology Limited </a>
@@ -578,7 +608,7 @@
                                     <img src="assets/images/portfolio/contessa2.png" alt="Personal Portfolio">
                                 </div>
                                 <div class="experience-center col-md-10">
-                                    <span class="date">November 2018 - March 2019</span>
+                                    <span class="date">October 2018 - February 2019</span>
                                     <h4 class="experience-title">
                                         <a target="_blank" href="https://www.contessabd.com/"> Contessa Solutions &
                                             Consultants Ltd </a>
